c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/var_decl_bad_tag_1.c
int main(void) {
    struct 4 foo;  // a struct tag must be an identifier (not a constant)
    return 0;
}